--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -110,7 +110,7 @@
     <script type="text/javascript" src="{{ "js/vendor/lunr-languages/lunr.stemmer.support.js" | absURL }}"></script>
     <script type="text/javascript" src="{{ "js/vendor/lunr-languages/tinyseg.js" | absURL }}"></script>
     <script type="text/javascript" src="{{ "js/vendor/lunr-languages/lunr.ja.js" | absURL  }}"></script>
-    {{ if not .IsHome }}
+    {{ if eq .RelPermalink "/search/" }}
     <script type="text/javascript" src="{{ with  resources.Get "js/search.js" | minify }}{{ .RelPermalink }}{{ end }}"></script>
     {{ end }}
     {{ partial "jsonld.html" . }}
