hide hamburger menu on mobile view

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,9 +4,11 @@
             <a href="{{ $.Site.BaseURL }}">
                 {{ $.Site.Title }}
             </a>
+            <!--
             <div id="hamburger" class="spShow close partials__header__hamburger">
                 <div class="partials__header__hamburger__line"></div>
             </div>
+            -->
         </div>
         <div id="hamburgerMenu" class="close partials__header__menu">
             <nav class="spShow partials__header__menu__search">
@@ -53,8 +55,8 @@
     <script>
         document.querySelectorAll('#hamburger, #overlay').forEach(ele => {
             ele.addEventListener('click', function(ev) {
-                document.querySelector('#hamburger').classList.toggle('open')
-                document.querySelector('#hamburger').classList.toggle('close')
+                //document.querySelector('#hamburger').classList.toggle('open')
+                //document.querySelector('#hamburger').classList.toggle('close')
                 document.querySelector('#hamburgerMenu').classList.toggle('open')
                 document.querySelector('#hamburgerMenu').classList.toggle('close')
                 document.querySelector('#overlay').classList.toggle('open')
