feat: ヨーロッパ旅行の記事更新とサイト改善
- ヨーロッパハネムーンの記事を追加・更新
- SCSSのスタイル調整
- hugo.ymlの設定変更
- パンくずリストの修正
- アフィリエイト検索用のショートコードを追加

--- a/assets/scss/layouts/_default/single.scss
+++ b/assets/scss/layouts/_default/single.scss
@@ -25,6 +25,7 @@
         }
         &__shareLinks {
             margin-bottom: 20px;
+            white-space: nowrap;           /* 折り返し防止 */
         }
         &__tag {
             &__items {
