--- a/layouts/partials/breadcrumb.html
+++ b/layouts/partials/breadcrumb.html
@@ -1,7 +1,7 @@
 <ol class="partials__breadcrumb">
     <li>
         <a href="{{ .Site.BaseURL }}">
-            <i class="fas fa-home"></i>Home
+            <i class="fas fa-home"></i>ホーム
         </a>
     </li>
     {{ with .Params.categories }}
