--- a/layouts/shortcodes/blog-card.html
+++ b/layouts/shortcodes/blog-card.html
@@ -47,15 +47,15 @@
             {{- $thumbnail_url = ($thumbnail.Fill (printf "200x200 center q%d webp" $.Site.Params.imageQuality)).Permalink -}}
         {{- end -}}
 
-        <a href="{{- $url -}}" style="padding: 12px;border: solid 1px #eee;display: flex;text-decoration: none;color: inherit;" onMouseOver="this.style.opacity='0.9'">
-            <div style="flex-shrink: 0;">
-                <img src="{{- $thumbnail_url -}}" alt="" width="100" height="100">
+        <a href="{{- $url -}}" class="blog-card">
+            <div class="blog-card-thumbWrap">
+                <img class="blog-card-thumb" src="{{- $thumbnail_url -}}" alt="" loading="eager">
             </div>
-            <div style="margin-left: 10px;">
-                <h2 style="margin: 0;padding-bottom: 13px;border: none;font-size: 16px;">
-                    {{- $title -}}
-                </h2>
-                <p style="margin: 0;font-size: 13px;word-break: break-word;display: -webkit-box;-webkit-box-orient: vertical;-webkit-line-clamp: 3;overflow: hidden;">
+            <div class="blog-card-right">
+                <div class="blog-card-title">
+                    {{- replace $title "&nbsp;" " " | safeHTML -}}
+                </div>
+                <p class="blog-card-description">
                     {{- $description | plainify | safeHTML -}}
                 </p>
             </div>
