feat: Fallback to .Summary for self-blog-card description

--- a/layouts/shortcodes/self-blog-card.html
+++ b/layouts/shortcodes/self-blog-card.html
@@ -19,9 +19,15 @@
                 <div class="blog-card-title">
                     {{- .Title -}}
                 </div>
+                {{ with .Params.description }}
                 <p class="blog-card-description">
-                    {{- .Summary | plainify | safeHTML -}}
+                    {{ . }}
                 </p>
+                {{ else }}
+                <p class="blog-card-description">
+                    {{ .Summary }}
+                </p>
+                {{ end }}
             </div>
         </a>
     {{- end -}}
