--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -32,6 +32,8 @@
         {{- end -}}
     {{- end -}}
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4535736248797328"
+     crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
